# quickrs

./: .gitmodules  Cargo.toml
core/: Cargo.toml
core/src/: class.rs  loader.rs  persistent.rs  property.rs  result.rs
core/src/context/: ctx.rs
core/src/value/: function.rs  module.rs
examples/module-loader/src/: main.rs
examples/native-module/: Cargo.toml
examples/native-module/src/: main.rs
macro/: Cargo.toml
rquickjs-core/: Cargo.toml
rquickjs-core/src/: class.rs  value.rs
rquickjs-core/src/value/: module.rs
rquickjs-sys/: build.rs
rquickjs-sys/src/bindings/: wasm32-wasi.rs
sys/: build.rs  build_lib.sh
sys/src/bindings/: wasm32-wasi.rs
