[package]
name = "native-module"
version = "0.1.0"
authors = ["Dmitry"]
edition = "2018"
publish = false

[dependencies]
tokio = { version = "1.14.0", features = [ "rt" ] }

[dependencies.rquickjs]
path = "../.."
default-features = false
features = ["exports", "loader", "futures", "tokio", "macro" ]
